# agents-sandbox

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  go.mod  go.sum
.githooks/: pre-commit
docs/: agent_guide.md  architecture_overview.md  cli_reference.md  companion_container_guide.md  configuration_reference.md  container_dependency_strategy.md  daemon_state_management.md  declarative_yaml_config.md  development.md  isolation_and_security.md  mount_and_copy_strategy.md  protocol_design_principles.md  quick_start.md  release.md  sandbox_container_lifecycle.md  sdk_async_usage.md  sdk_go_usage.md  sdk_python_usage.md  theme.json  why_not_builtin_sandboxes.md
scripts/: agboxd_start.sh  cleanup.sh  generate_proto.sh  install.sh  install_local.sh  release.sh  release_image.sh  run_test.sh
sdk/python/: pyproject.toml
sdk/python/src/agents_sandbox/: __init__.py  _conversions.py  _grpc_client.py  _request_types.py  client.py  conversions.py  errors.py  high_level_client.py  models.py  types.py
sdk/python/src/agents_sandbox/_generated/: service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
sdk/python/tests/: smoke_support.py  test_command_field.py  test_create_sandbox_config.py  test_gpu_device_requests.py  test_idle_ttl.py  test_network_isolation.py  test_port_mapping.py  test_real_runtime.py  test_resource_limits.py  test_sandbox_handle_conversions.py  test_smoke.py  test_smoke_error_integration.py  test_smoke_public_api.py  test_smoke_wait_errors.py  test_smoke_wait_success.py
website/: index.html  install.sh  script.js  site.json  style.css
(+174 files in other folders)
