[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "agents-sandbox-sdk"
version = "0.1.0"
description = "Python SDK for agents-sandbox."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "agents-sandbox maintainers" }]
dependencies = [
  "googleapis-common-protos>=1.69,<2",
  "grpcio>=1.78,<2",
  "grpcio-status>=1.78,<2",
  "protobuf>=6.31,<7",
]

[dependency-groups]
dev = [
  "pytest>=8.4,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agents_sandbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
